fix: link of write.ups

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               Incluye detalles de vulnerabilidades, herramientas utilizadas y recomendaciones de mitigación.
             </p>
             <p><strong>Formato:</strong> Markdown estructurado por plataforma</p>
-            <a class="github-link" href="https://github.com/tuusuario/writeups" target="_blank">Ver todos los Write-ups en GitHub</a>
+            <a class="github-link" href="https://github.com/KuCh4u/write-ups.git" target="_blank">Ver todos los Write-ups en GitHub</a>
           </div>
         </div>
       </section>
