--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             Incluye detalles de vulnerabilidades, herramientas utilizadas y recomendaciones de mitigación.
           </p>
           <p><strong>Formato:</strong> Markdown estructurado por plataforma</p>
-          <a class="github-link" href="https://github.com/tuusuario/writeups" target="_blank">Ver todos los Write-ups en GitHub</a>
+          <a class="github-link" href="https://github.com/kuch4u/writeups" target="_blank">Ver todos los Write-ups en GitHub</a>
         </div>
       </div>
     </section>
