--- a/index.html
+++ b/index.html
@@ -232,9 +232,12 @@
   </style>
 </head>
 <body>
+  <!-- Dentro del <body> -->
   <nav>
     <div class="nav-container">
-      <span class="nav-title">Portafolio</span>
+      <a href="index.html">
+        <img src="img/logo.jpg" alt="Logo Nicolas Cartagena" style="height: 32px; border-radius: 50%;" />
+      </a>
       <button class="nav-toggle" onclick="toggleMenu()">☰</button>
       <ul id="nav-menu">
         <li><a href="#sobre-mi">Sobre mí</a></li>
@@ -243,9 +246,11 @@
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#insignias">Insignias</a></li>
+        <!-- <li><a href="servicios.html">Servicios</a></li> -->
       </ul>
     </div>
   </nav>
+
 
   <header>
     <h1>Nicolas Cartagena</h1>
